# memurai-sql

./: .clang-format  .gitignore  CMakeLists.txt  COPYING.txt  README.md
.github/workflows/: build-memurai-sql.yml
cmake/: GetGitRevisionDescription.cmake  PackagingDeb.cmake  version.cpp.in
datacreator/datacreator/: CMakeLists.txt  main.cpp
include/: aligned_malloc.h  cache.h  concats.h  error_codes.h  exception.h  gmtime.h  growingStrategy.h  inc_during_scope.h  lambda.h  logger.h  memurai-multicore.h  module_interface.h  strategy.h  types.h  util.h
include/scope/: expect.h  scope_exit.h  take_time.h
include/sync/: spinlock.h  syncqueue.h
include/test/: run_test.h  test_table_utils.h  test_utils.h
include/threads/: cancellation.h  grouptoken.h  itoken.h  runningloop.h  stoppable.h  thread_pool.h  thread_starter.h  worker_thread.h
include/valkey/: valkeymodule.h
include/valkey/xplat/: portability_fixes.h
multicore/: CMakeLists.txt
multicore/include/: jobid.h  server.h
multicore/src/: server.cpp
sql-core/: CMakeLists.txt
sql-core/src/: token.cpp
sql-fe/: CMakeLists.txt
sql-fe/include/: Buffer.h  ColumnTypes.h  DatabaseServerEvent.h  FE_ClientReply.h  IActual.h  IPublisher.h  PublisherCount.h  PublisherV2DStrings.h  QueryCtx.h  QueryWalker.h  TSC.h  TokenizedStrings.h  ascdesc.h  column.h  concurrent_foreach_column.h  database.h  fe-types.h  frontend.h  idxtable.h  interface.h  p_pmurwl.h  query2ds.h  rid.h  serializeTable.h  shared_table_lock.h  string_token.h  strings_metadata.h  table_metadata.h  tidcid.h  tsc_interface.h  version.h
sql-fe/src/: Buffer.cpp  PublisherV2DStrings.cpp  QueryCtx.cpp  QueryWalker.cpp  column.cpp  database.cpp  frontend.cpp  idxtable.cpp  interface.cpp  module.cpp
system-tests/: CMakeLists.txt
system-tests/include/: test-context.h
system-tests/src/: main.cpp  test-flushdb.cpp  test-hash-ops.cpp  test-keyspace-notification.cpp
unit-tests/: CMakeLists.txt
unit-tests/src/: main.cpp  test_TokenizedStrings.cpp  test_cache_behavior.cpp  test_database.cpp  test_frontend.cpp  test_idxtable.cpp  test_query_exec.cpp  test_query_walker.cpp  test_server.cpp  test_spinlock.cpp  test_string_metadata.cpp  test_syncqueue.cpp  test_table_utils.cpp  test_thread_pool.cpp  test_utils.cpp
